--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a {
     text-decoration: none;
     color: #000000;
     font-size: 22px;
-    font-weight: 200px;
+    font-weight: 600;
 }
 
 a:hover {
@@ -65,6 +65,7 @@ a:hover {
     border-radius: 15px;
     border: 2px solid;
     border-color: #67215F;
+    background-color:#FFF5EE;
 }
 
 .search-bar-section input::placeholder {
@@ -88,10 +89,76 @@ a:hover {
 /* Main section */
 
 .main {
-    width: 100%;
+    width: auto;
     background-color: #FFE4C4;
+    display: flex;
+    justify-content: space-around;
+    padding: 0px;
 }
 
+.main-left-section {
+    align-self: center;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 .slogan {
     margin: 0%;
+    font-size: 50px;
+    font-weight: 600;
+    width: auto;
+    height: auto;
+    text-align: center;
 }
+
+.slogan #slogan-highlight {
+    color:#67215F
+}
+
+.main-right-imageholder img{
+    width: 443px;
+    height: 522px;
+}
+
+.paragraph {
+    font-size: 20px;
+    font-weight: 400;
+    width: 457px;
+    height: 112;
+    text-align: left;
+}
+
+.main-button-section {
+    display: flex;
+    justify-content: space-between;
+}
+
+.enrollBtn, .learnmoreBtn {
+    width: 262px;
+    height: 77px;
+    font-size: 25px;
+    font-weight: 600;
+    background-color: #FFE4C4;
+    color:#67215F;
+    border: solid;
+    border-color: #67215F;
+    border-width: 3px;
+    border-radius: 8px;
+
+}
+
+.enrollBtn:hover, .learnmoreBtn:hover {
+    width: 262px;
+    height: 77px;
+    font-size: 25px;
+    font-weight: 600;
+    background-color: #67215F;
+    color:#FFF5EE;
+    border: solid;
+    border-color: #67215F;
+    border-width: 3px;
+    border-radius: 8px;
+}
+
+
