--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
 
 *{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 html, body {
     width: 100%;
     height: 100%;
     margin:0%;
+    background-color: #FFF5EE;
 }
 
 /* Header section */
@@ -18,6 +19,8 @@ html, body {
     display: flex;
     justify-content: space-between;
     padding: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 .logo-section {
@@ -61,8 +64,8 @@ a:hover {
 
 .search-bar-section input {
     width: 328px;
-    height: 45px;
-    border-radius: 15px;
+    height: 40px;
+    border-radius: 10px;
     border: 2px solid;
     border-color: #67215F;
     background-color:#FFF5EE;
@@ -70,11 +73,14 @@ a:hover {
 
 .search-bar-section input::placeholder {
     font-size:  18px;
-    font-weight: 100;
+    font-weight: 600;
     text-align: center;
     color:#000000;
     background-image: url(assets/material-symbols_search-rounded.svg);
     background-repeat: no-repeat;
+    background-position: fixed;
+    background-position-x: 15px;
+    background-position-y: 4px;
 }
 
 .search-bar-section img {
@@ -104,15 +110,17 @@ a:hover {
     justify-content: space-between;
 }
 .slogan {
+    font-family: sans-serif;
     margin: 0%;
     font-size: 50px;
-    font-weight: 600;
+    font-weight: 900;
     width: auto;
     height: auto;
     text-align: center;
 }
 
 .slogan #slogan-highlight {
+    font-family: sans-serif;
     color:#67215F
 }
 
@@ -122,8 +130,9 @@ a:hover {
 }
 
 .paragraph {
+    font-family: 'Poppins';
     font-size: 20px;
-    font-weight: 400;
+    font-weight: 600;
     width: 457px;
     height: 112;
     text-align: left;
@@ -159,6 +168,54 @@ a:hover {
     border-color: #67215F;
     border-width: 3px;
     border-radius: 8px;
+}
+
+.cards-section {
+    background-color: #FFF5EE;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+    padding-top: 30px;
+    padding-bottom: 40px;
+}
+
+.cards-title {
+    margin:0%;
+    align-self: center;
+    font-weight: 500;
+    font-size: 35px;
+    font-weight: 900;
+}
+
+.cards{
+    display: flex;
+    justify-content: space-around;
+}
+
+.card{
+    height: 229px;
+    width: 229px;
+    background-color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    
+    border-radius: 20px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.card p{
+    text-align: center;
+    margin-top: 0%;
+    color: #000000;
+    font-weight: 900;
+}
+
+.card img{
+    height: 121px;
+    width: 121px;
+    align-self: center;
 }
 
 
